Fix hard path